<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"

        />
    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Clear"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnEight"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        android:textSize="19sp"
        android:onClick="buttonClear"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="19sp"
        android:onClick="buttonBack"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@+id/btnClear"
        app:layout_constraintStart_toEndOf="@id/btnClear"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintBottom_toBottomOf="@id/btnClear"
        />

    <!-- numbered buttons 7,8,9 -->
    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="@id/btnClear"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnEight"
        android:text="@string/seven"
        android:textSize="20sp"
        android:onClick="buttonSeven"
        android:backgroundTint="@color/button_background_color"
        />
    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/eight"
        android:textSize="20sp"
        android:onClick="buttonEight"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintTop_toTopOf="@+id/btnSeven"
        app:layout_constraintBottom_toBottomOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@id/btnNine"
        />
    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/nine"
        android:textSize="20sp"
        android:onClick="buttonNine"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintTop_toTopOf="@+id/btnSeven"
        app:layout_constraintBottom_toBottomOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"
        />

    <!-- numbered buttons 4,5,6 -->
    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven"
        app:layout_constraintStart_toStartOf="@id/btnClear"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnFive"
        android:text="@string/four"
        android:textSize="20sp"
        android:onClick="buttonFour"
        android:backgroundTint="@color/button_background_color"
        />
    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/five"
        android:textSize="20sp"
        android:onClick="buttonFive"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintTop_toTopOf="@+id/btnFour"
        app:layout_constraintBottom_toBottomOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnSix"
        />
    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/six"
        android:textSize="20sp"
        android:onClick="buttonSix"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintTop_toTopOf="@+id/btnFour"
        app:layout_constraintBottom_toBottomOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnMultiply"
        />

    <!-- numbered buttons 1,2,3 -->
    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnFour"
        app:layout_constraintStart_toStartOf="@id/btnClear"
        app:layout_constraintBottom_toBottomOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        android:text="@string/One"
        android:textSize="20sp"
        android:onClick="buttonOne"
        android:backgroundTint="@color/button_background_color"
        />
    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/two"
        android:textSize="20sp"
        android:onClick="buttonTwo"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toTopOf="@+id/btnOne"
        app:layout_constraintBottom_toBottomOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        />
    <Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/three"
        android:textSize="20sp"
        android:onClick="buttonThree"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toTopOf="@+id/btnOne"
        app:layout_constraintBottom_toBottomOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        />

    <!-- numbered buttons 0,.,= -->
    <Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        app:layout_constraintStart_toStartOf="@id/btnClear"
        app:layout_constraintEnd_toStartOf="@id/btnPoint"
        android:text="@string/zero"
        android:textSize="20sp"
        android:onClick="buttonZero"
        android:backgroundTint="@color/button_background_color"
        />
    <Button
        android:id="@+id/btnPoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/point"
        android:textSize="20sp"
        android:onClick="buttonPoint"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toTopOf="@+id/btnZero"
        app:layout_constraintBottom_toBottomOf="@id/btnZero"
        app:layout_constraintEnd_toEndOf="@id/btnTwo"
        />
    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/equals"
        android:textSize="20sp"
        android:onClick="calculate"
        app:layout_constraintStart_toEndOf="@id/btnPoint"
        app:layout_constraintTop_toTopOf="@+id/btnZero"
        app:layout_constraintBottom_toBottomOf="@id/btnZero"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- operators +, -, *, / -->
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/btnClear"
        app:layout_constraintBottom_toBottomOf="@id/btnClear"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/plus"
        android:textSize="20sp"
        android:onClick="buttonPlus"
        />
    <Button
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/btnSeven"
        app:layout_constraintBottom_toBottomOf="@id/btnSeven"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/minus"
        android:textSize="20sp"
        android:onClick="buttonMinus"
        />
    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/btnFour"
        app:layout_constraintBottom_toBottomOf="@id/btnFour"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/multiply"
        android:textSize="20sp"
        android:onClick="buttonTimes"
        />
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/btnOne"
        app:layout_constraintBottom_toBottomOf="@id/btnOne"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/divide"
        android:onClick="buttonDivide"
        android:textSize="20sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>